# arrayfire-benchmark

./: .gitmodules  CMakeLists.txt  README.md  boost_compute_sort.patch  updateLibraries.sh
CMakeModules/: FindArrayFire.cmake  FindOpenCL.cmake
data/single_frames/: README.md
scripts/: .gitignore  README.md  benchmark_plots.py  benchmark_server.py  bokeh_results.py  celero_parser.py  make-plots.py  matplot_results.py  plot_results.py  standalone-plot.py
src/: AFResultTable.cpp  AFResultTable.h  CMakeLists.txt  accumulate.cpp  bandwidth.cpp  bilateral.cpp  cholesky.cpp  convolve.cpp  data.cpp  elwise.cpp  erode.cpp  fft.cpp  fixtures.h  gfor.cpp  histogram.cpp  images.cpp  jit.cpp  lapack_cholesky.cpp  lapack_lu.cpp  lu.cpp  main.cpp  matmul.cpp  matrix_multiply.cpp  medfilt.cpp  pageable.cpp  pinned.cpp  resize.cpp  rotate.cpp  sort.cpp  sum.cpp  transpose.cpp
